--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
 									<div class="project-name">
 										Hackernews
 									</div>
+									<hr>
 									<div class="project-category text-faded">
 										Lorem ipsum dolor sit amet consectetur adipisicing elit. A molestiae eveniet neque beatae magnam expedita praesentium earum impedit, officia, vel aliquid, assumenda cumque iure animi voluptas culpa vitae magni sapiente.
 									</div>
@@ -187,7 +188,7 @@
 						</a>
 					</div>
 					<div class="col-lg-4 col-sm-6">
-						<a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
+						<a class="portfolio-box" href="http://robofriendskszysieg.herokuapp.com/">
 							<img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
 							<div class="portfolio-box-caption">
 								<div class="portfolio-box-caption-content">
@@ -208,7 +209,7 @@
 						</a>
 					</div>
 					<div class="col-lg-4 col-sm-6">
-						<a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
+						<a class="portfolio-box" href="https://kszysieg.github.io/pig-game/">
 							<img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
 							<div class="portfolio-box-caption">
 								<div class="portfolio-box-caption-content">
@@ -228,7 +229,7 @@
 						</a>
 					</div>
 					<div class="col-lg-4 col-sm-6">
-						<a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
+						<a class="portfolio-box" href="https://kszysieg.github.io/budgety/">
 							<img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
 							<div class="portfolio-box-caption">
 								<div class="portfolio-box-caption-content">
@@ -249,7 +250,7 @@
 						</a>
 					</div>
 					<div class="col-lg-4 col-sm-6">
-						<a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
+						<a class="portfolio-box" href="https://github.com/kszysieg/JavaScript30_Challenge">
 							<img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
 							<div class="portfolio-box-caption">
 								<div class="portfolio-box-caption-content">
@@ -335,7 +336,7 @@
 		<script src="vendor/scrollreveal/scrollreveal.min.js"></script>
 		<script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 		<!-- Custom scripts for this template -->
-		<script src="js/creative.min.js"></script>
+
 		<script src="js/particles.js"></script>
 		<script src="js/app.js"></script>
 	</body>
