--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						<p class="text-faded mb-4">
 							Całą swoją uwagę koncentruję na byciu jak najlepszym w tym co robię, oraz rozwijaniu swoich umiejętności, dlatego chce dołączyć do Twojego zespołu jako Junior Front-End Developer!
 						</p>
-						<a class="btn btn-light btn-xl js-scroll-trigger sr-button" href="https://www.dropbox.com/s/50lg0gdwwaxzrb7/KrzysztofKobylinskiCV.pdf?dl=0">moje CV</a>
+						<a class="btn btn-light btn-xl js-scroll-trigger sr-button" href="http://bit.ly/KrzysztofKobylinskiCV">moje CV</a>
 					</div>
 				</div>
 			</div>
@@ -319,7 +319,7 @@
 						<p>+48 793-052-443</p>
 					</div>
 					<div class="col-lg-4 mr-auto text-center">
-						<a href="https://www.dropbox.com/s/50lg0gdwwaxzrb7/KrzysztofKobylinskiCV.pdf?dl=0">
+						<a href="http://bit.ly/KrzysztofKobylinskiCV">
 							<i class="fa fa-file-o fa-3x mb-3 sr-contact red"></i>
 							<p>
 								CV.pdf
