--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<a class="nav-link js-scroll-trigger" href="#about">O mnie</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link js-scroll-trigger" href="#services">Umiejętności</a>
+							<a class="nav-link js-scroll-trigger" href="#services">Technologie</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link js-scroll-trigger" href="#portfolio">Projekty</a>
@@ -159,9 +159,9 @@
 									</div>
 									<hr>
 									<div class="project-category text-faded">
-										React + API Pokeapi
-										<hr>
 										Aplikacja wyświetla Pokedex, pobierając listę Pokemonów z zewnętrznego API. Kazdy Pokemon ma własną kartę w informacjami o nim
+										<hr>
+										React + API Pokeapi
 									</div>
 								</div>
 							</div>
@@ -177,9 +177,9 @@
 									</div>
 									<hr>
 									<div class="project-category text-faded">
-										React + API Clarifai<br>
-										<hr>
 										Użytkownik wkleja link do zdjęcia, następnie Aplikacja określa czy na tym zdjęciu jest twarz i  oznacza je ramką. Work in progress
+										<hr>
+										React + API Clarifai, Udemy<br>
 									</div>
 								</div>
 							</div>
@@ -195,9 +195,9 @@
 									</div>
 									<hr>
 									<div class="project-category text-faded">
-										React
-										<hr>
 										Aplikacja Wyświetla karty z robotami. W momencie wyszukiwania nazwy lista robotów aktualizuje się automatycznie
+										<hr>
+										React
 									</div>
 								</div>
 							</div>
@@ -213,10 +213,10 @@
 									</div>
 									<hr>
 									<div class="project-category text-faded">
-										JavaScript
-										<hr>
 										Jeden z dwóch graczy rzuca kostkami. Nastepnie można zatrzymać wynik lub rzucać dalej.
 										W przypadku wyrzucenia 1 oczka traci się ruch.
+										<hr>
+										JavaScript, Udemy
 									</div>
 								</div>
 							</div>
@@ -232,11 +232,11 @@
 									</div>
 									<hr>
 									<div class="project-category text-faded">
-										JavaScript 
-										<hr>
 										Aplikacja liczy przychody i wydatki użytkownika. 
 										kolor formularza zależy od rodzaju danych (+/-).
 										Liczony jest procentowy wpływ wydatków na budżet.
+										<hr>
+										JavaScript, Udemy  
 									</div>
 								</div>
 							</div>
@@ -252,10 +252,9 @@
 									</div>
 									<hr>
 									<div class="project-category text-faded">
-										JavaScript 
-										<hr>
 										W czasie kursu stworzyłem takie aplikacje jak np.:
 										własny odtwarzacz wideo (11), listę zadań wykorzystującą localstorage (15), czy syntezator mowy (23)
+										
 									</div>
 								</div>
 							</div>
@@ -264,9 +263,9 @@
 				</div>
 			</div>
 		</section>
-		<section class="smallsection bg-dark text-white">
+		<section class="bg-primary" >
 			<div class="container text-center">
-				<h2 class="mb-4">Resztę projektów znajdziesz na moim GitHubie</h2>
+				<h2 class="mb-4 text-white">Resztę projektów znajdziesz na moim GitHubie</h2>
 				<a class="btn btn-light btn-xl sr-button" href="https://github.com/kszysieg">GitHub</a>
 			</div>
 		</section>
@@ -280,7 +279,7 @@
 				</div>
 				<div class="row">
 					<div class="col-lg-4 ml-auto text-center">
-						<a href="https://github.com/kszysieg">
+						<a class="sr-contact red" href="https://github.com/kszysieg">
 							<i class="fa fa-github fa-3x mb-3 sr-contact red"></i>
 							<p>
 								github.com/kszysieg
@@ -288,14 +287,14 @@
 						</a>
 					</div>
 					<div class="col-lg-4 mr-auto text-center">
-						<a href="mailto:krzysztof.a.kobylinski@gmail.com">
+						<a class="sr-contact red" href="mailto:krzysztof.a.kobylinski@gmail.com">
 							<i class="fa fa-envelope-o fa-3x mb-3 sr-contact red"></i>
 							<p>krzysztof.a.kobylinski@gmail.com
 							</p>
 						</a>
 					</div>
 					<div class="col-lg-4 mr-auto text-center">
-						<a href="https://www.linkedin.com/in/krzysztofkobyli%C5%84ski/">
+						<a class="sr-contact red" href="https://www.linkedin.com/in/krzysztofkobyli%C5%84ski/">
 							<i class="fa fa-linkedin fa-3x mb-3 sr-contact red"></i>
 							<p>
 								linkedin.com/krzysztofkobylinski
@@ -306,7 +305,7 @@
 				<br><br>
 				<div class="row">
 					<div class="col-lg-4 mr-auto text-center">
-						<a href="https://www.facebook.com/kkobylinski">
+						<a class="sr-contact red" href="https://www.facebook.com/kkobylinski">
 							<i class="fa fa-facebook fa-3x mb-3 sr-contact red"></i>
 							<p>
 								facebook.com/kkobylinski
@@ -316,15 +315,26 @@
 					</div>
 					<div class="col-lg-4 ml-auto text-center">
 						<i class="fa fa-phone fa-3x mb-3 sr-contact red"></i>
-						<p>+48 793-052-443</p>
+						<p >+48 793-052-443</p>
 					</div>
 					<div class="col-lg-4 mr-auto text-center">
-						<a href="http://bit.ly/KrzysztofKobylinskiCV">
+						<a class="sr-contact red" href="http://bit.ly/KrzysztofKobylinskiCV">
 							<i class="fa fa-file-o fa-3x mb-3 sr-contact red"></i>
 							<p>
 								CV.pdf
 							</p>
 						</a>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="smallsection bg-dark text-white">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-8 mx-auto text-center">
+						<p class="text-white mb-4"> Krzysztof Kobyliński 2018, 
+						<a class="text-white mb-4" href="https://github.com/kszysieg/kszysieg.github.io/blob/master/LICENSE">MIT license</a>
+						</p>
 					</div>
 				</div>
 			</div>
